--- a/167. Two Sum II - Input Array Is Sorted.ipynb
+++ b/167. Two Sum II - Input Array Is Sorted.ipynb
@@ -7,14 +7,15 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def topKFrequent(self, nums: List[int], k: int) -> List[int]:\n",
-    "        counter={}\n",
-    "        counter=Counter(nums)\n",
-    "        a = sorted(counter.items(),key=lambda x:x[1],reverse=True)[:k]\n",
-    "        ans=[]\n",
-    "        for i in a:\n",
-    "            ans.append(i[0])\n",
-    "        return ans"
+    "    def twoSum(self, numbers: List[int], target: int) -> List[int]:\n",
+    "        L, R = 0, len(numbers)-1\n",
+    "        while (R > L):\n",
+    "            if numbers[L] + numbers[R] == target:\n",
+    "                return [L+1,R+1]\n",
+    "            elif numbers[L] + numbers[R] > target:\n",
+    "                R-=1\n",
+    "            else:\n",
+    "                L+=1"
    ]
   }
  ],
