--- a/238. Product of Array Except Self.ipynb
+++ b/238. Product of Array Except Self.ipynb
@@ -35,6 +35,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
+    "        p = 1\n",
+    "        ans = []\n",
+    "        for i in nums:\n",
+    "            ans.append(p)\n",
+    "            p = p * i\n",
+    "        p = 1\n",
+    "        n = len(nums)-1\n",
+    "        for i in nums[::-1]:\n",
+    "            ans[n] = ans[n]*p\n",
+    "            p = p*i\n",
+    "            n-=1\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -57,12 +90,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "c36892433cb4678e8e18e102d61482daaf1eaa7c72471b8a896202a24f4706d1"
    }
   }
  },
