--- a/15. 3Sum.ipynb
+++ b/15. 3Sum.ipynb
@@ -55,6 +55,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(0, 0, 0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def threeSum(self, nums: List[int]) -> List[List[int]]:\n",
+    "        nums=sorted(nums)\n",
+    "        ans = set()\n",
+    "        for i in range(len(nums)-2):\n",
+    "            L, R = i+1, len(nums)-1\n",
+    "            while R > L:\n",
+    "                if nums[R]+nums[L]+nums[i]==0:\n",
+    "                    ans.add((nums[i],nums[L],nums[R]))\n",
+    "                    L+=1\n",
+    "                    R-=1\n",
+    "                elif nums[R]+nums[L]+nums[i]>0:\n",
+    "                    R-=1\n",
+    "                else:\n",
+    "                    L+=1\n",
+    "        return list(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -77,12 +109,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Sep 13 2022, 22:03:16) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "c36892433cb4678e8e18e102d61482daaf1eaa7c72471b8a896202a24f4706d1"
    }
   }
  },
