Changes to be committed: 	modified:   116. Populating Next Right Pointers in Each Node.ipynb 	modified:   121. Best Time to Buy and Sell Stock.ipynb 	new file:   87. Scramble String.ipynb 	new file:   875. Koko Eating Bananas.ipynb

--- a/121. Best Time to Buy and Sell Stock.ipynb
+++ b/121. Best Time to Buy and Sell Stock.ipynb
@@ -28,12 +28,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6 (default, Sep 13 2022, 22:03:16) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "c36892433cb4678e8e18e102d61482daaf1eaa7c72471b8a896202a24f4706d1"
    }
   }
  },
