--- a/20. Valid Parentheses.ipynb
+++ b/20. Valid Parentheses.ipynb
@@ -36,7 +36,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        ans = [' ']\n",
+    "        for i in s:\n",
+    "            if i == ')' and ans[-1]=='(':\n",
+    "                del ans[-1]\n",
+    "            elif i == ']' and ans[-1]=='[':\n",
+    "                del ans[-1]\n",
+    "            elif i == '}' and ans[-1]=='{':\n",
+    "                del ans[-1]\n",
+    "            else:\n",
+    "                ans.append(i)\n",
+    "        return len(ans)==1"
+   ]
   }
  ],
  "metadata": {
