--- a/104. Maximum Depth of Binary Tree.ipynb
+++ b/104. Maximum Depth of Binary Tree.ipynb
@@ -21,6 +21,28 @@
     "        else:\n",
     "            return 1+max(self.DFS(root.left),self.DFS(root.right))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
+    "class Solution:\n",
+    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        def helper(root):\n",
+    "            if not root:\n",
+    "                return 0\n",
+    "            else:\n",
+    "                return 1+max(helper(root.right), helper(root.left))\n",
+    "        return helper(root)"
+   ]
   }
  ],
  "metadata": {
