--- a/87. Scramble String.ipynb
+++ b/87. Scramble String.ipynb
@@ -26,7 +26,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "# @return a boolean\n",
+    "    @cache\n",
+    "    def isScramble(self, s1, s2):\n",
+    "        n, m = len(s1), len(s2)\n",
+    "        if n != m or sorted(s1) != sorted(s2):\n",
+    "            return False\n",
+    "        if n < 4 or s1 == s2:\n",
+    "            return True\n",
+    "        f = self.isScramble\n",
+    "        for i in range(1, n):\n",
+    "            if f(s1[:i], s2[:i]) and f(s1[i:], s2[i:]) or \\\n",
+    "            f(s1[:i], s2[-i:]) and f(s1[i:], s2[:-i]):\n",
+    "                return True\n",
+    "        return False"
+   ]
   }
  ],
  "metadata": {
