--- a/102. Binary Tree Level Order Traversal.ipynb
+++ b/102. Binary Tree Level Order Traversal.ipynb
@@ -24,6 +24,37 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
+    "    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:\n",
+    "        q = []\n",
+    "        ans = []\n",
+    "        if root:\n",
+    "            q.append(root)\n",
+    "        while q:\n",
+    "            res = []\n",
+    "            for i in range(len(q)):\n",
+    "                temp = q.pop(0)\n",
+    "                if temp.left:\n",
+    "                    q.append(temp.left)\n",
+    "                if temp.right:\n",
+    "                    q.append(temp.right)\n",
+    "                res.append(temp.val)\n",
+    "            ans.append(res)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
+    "class Solution:\n",
     "    def DFS(self, root, height):\n",
     "        if root == None:\n",
     "            return\n",
