--- a/230. Kth Smallest Element in a BST.ipynb
+++ b/230. Kth Smallest Element in a BST.ipynb
@@ -24,6 +24,40 @@
     "            self.DFS(root.right)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, val=0, left=None, right=None):\n",
+    "#         self.val = val\n",
+    "#         self.left = left\n",
+    "#         self.right = right\n",
+    "class Solution:\n",
+    "    def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:\n",
+    "        self.ans = 0\n",
+    "        self.curr = 1\n",
+    "        self.find = False\n",
+    "        def helper(root,k):\n",
+    "            if not root:\n",
+    "                return\n",
+    "            helper(root.left,k)\n",
+    "            if self.find:\n",
+    "                return\n",
+    "            if self.curr == k:\n",
+    "                self.ans = root.val\n",
+    "                self.find = True\n",
+    "                return\n",
+    "            else:\n",
+    "                self.curr += 1\n",
+    "            helper(root.right,k)\n",
+    "        helper(root,k)\n",
+    "        return self.ans"
+   ]
   }
  ],
  "metadata": {
