--- a/test.ipynb
+++ b/test.ipynb
@@ -2,42 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20600000.0\n",
-      "21236000.0\n",
-      "21910160.0\n",
-      "22624769.6\n",
-      "23382255.776000004\n",
-      "24185191.122560006\n",
-      "25036302.589913607\n",
-      "25938480.745308425\n",
-      "26894789.590026934\n",
-      "27908476.96542855\n",
-      "28982985.583354264\n",
-      "30121964.71835552\n",
-      "31329282.601456854\n",
-      "32609039.55754427\n",
-      "33965581.930996925\n",
-      "35403516.84685674\n",
-      "36927727.85766815\n",
-      "38543391.52912824\n",
-      "40255995.02087594\n",
-      "42071354.722128496\n"
-     ]
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "init=20000000\n",
-    "for i in range(20):\n",
-    "    init=(init*1.06)-600000\n",
-    "    print(init)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -115,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Sep 13 2022, 22:03:16) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
