--- a/746. Min Cost Climbing Stairs.ipynb
+++ b/746. Min Cost Climbing Stairs.ipynb
@@ -26,7 +26,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def minCostClimbingStairs(self, cost: List[int]) -> int:\n",
+    "        # dp=cost[:2]\n",
+    "        # for i,n in enumerate(cost[2:]):\n",
+    "        #     tmp = min(dp[i],dp[i+1])\n",
+    "        #     dp.append(n+tmp)\n",
+    "        # # print(dp)\n",
+    "        # return min(dp[-1],dp[-2])\n",
+    "        pp,p = cost[0],cost[1]\n",
+    "        for i,n in enumerate(cost[2:]):\n",
+    "            tmp = min(pp,p)\n",
+    "            pp=p\n",
+    "            p=tmp+n\n",
+    "        return min(pp,p)"
+   ]
   }
  ],
  "metadata": {
