--- a/977. Squares of a Sorted Array.ipynb
+++ b/977. Squares of a Sorted Array.ipynb
@@ -40,7 +40,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def sortedSquares(self, A: List[int]) -> List[int]:\n",
+    "        ans = []\n",
+    "        r = len(A)-1\n",
+    "        l = 0\n",
+    "        while r>=l:\n",
+    "            if abs(A[r])>abs(A[l]):\n",
+    "                ans.append(A[r]*A[r])\n",
+    "                r-=1\n",
+    "            else:\n",
+    "                ans.append(A[l]*A[l])\n",
+    "                l+=1\n",
+    "        return ans[::-1]\n",
+    "                "
+   ]
   }
  ],
  "metadata": {
