--- a/test.ipynb
+++ b/test.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] [2]\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "a = [1,2]\n",
+    "print(a[:1],a[1:])"
+   ]
   },
   {
    "cell_type": "code",
