--- a/test.ipynb
+++ b/test.ipynb
@@ -74,6 +74,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 15, 5, 0] [15, 5, 0, 0]\n",
+      "[3, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coin = [1,5,10,25]\n",
+    "M = 90\n",
+    "dp1 = []\n",
+    "dp2 = []\n",
+    "coin = coin[::-1]\n",
+    "for i in coin:\n",
+    "    dp1.append(M)\n",
+    "    M %= i\n",
+    "    dp2.append(M)\n",
+    "print(dp1,dp2)\n",
+    "ans = []\n",
+    "for i in range(len(coin)):\n",
+    "    ans.append((dp1[i]-dp2[i])//coin[i])\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coin = [1,5,10,25]\n",
+    "M = 90\n",
+    "coin = coin[::-1]\n",
+    "ans = []\n",
+    "for i in coin:\n",
+    "    ans.append(M//i)\n",
+    "    M%=i\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
